--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.2
   http: ^1.3.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
